# ai-chip-design-platform

./: .dockerignore  .env.example  .env.example.sh  .gitignore  AVA_Platform_Documentation.docx  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Makefile.cocotb  PROJECT STATUS REPORT.docx  README.md  RISCV_Verification_automation.docx  SECURITY.md  ava.py  ava_patched.py  conftest.py  docker-compose.yaml  pyproject.toml  requirements-ml.txt  requirements.txt
.github/: pull_request_template.md
AGENT_A/: __init__.py  commitlog.schema.json  interfaces.md  run_manifest.schema.json  semantic_analyzer.py
AGENT_B/: README.md  __init__.py  testbench_generator.py
AGENT_C/: README_Agent_C.md  __init__.py  agent_c_readme.md  ava.py  commitlog.schema.json  iss_efficiency.py  link.ld  run_iss.py  run_manifest.schema.json  rv32im_smoke.S  spike_parser.py  test_run_iss_integration.py  test_spike_parser.py
AGENT_D/: README  __init__.py  bug_hypothesis.py  compare_commitlogs.py  test_comparator.py
AGENT_E/: README_Agent_E.md  __init__.py  run_compliance.py  run_rtl_adapter.py  test_compliance_runner.py
AGENT_F/: README.md  __init__.py  ava_coverage_patch.py  cold_path_ranker.py  commitlog.schema.json  coverage_database.py  coverage_pipeline.py  manifest_lock.py  run_manifest.schema.json
AGENT_G/: README.md  __init__.py  asm_builder.py  causal_engine.py  directed_tests.py  generate_tests.py  genetic_engine.py  manifest.json  random_gen.py
AGENT_H/: __init__.py  advanced_link_verifier.py  aes_verifier.py  agent_h_intent.py  aia_verifier.py  atomics_verifier.py  bitmanip_verifier.py  branch_predictor_verifier.py  bug_intelligence.py  bus_verifier.py  cache_verifier.py  cas_verifier.py  cdc_verifier.py  coherence_verifier.py  confidence_scorer.py  contract_dsl.py  (+55 more)
(+186 files in other folders)
